--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <li>
                 <a href="stuff/procedural_stuff/tree.html">tree</a>
             <li>
-                    <a href="stuff/procedural_stuff/gpu_cgol.html">cgol</a>
+                <a href="stuff/procedural_stuff/gpu_cgol.html">cgol</a>
+            </li>
+            <li>
+                <a href="games/snails/snailbounce.html">Snails!</a>
             </li>
             </ul>
 
