--- a/games/snails/snailbounce.html
+++ b/games/snails/snailbounce.html
@@ -70,9 +70,11 @@
                 this.x = Math.random() * canvas.width;
                 this.y = Math.random() * canvas.height;
 
-                this.speed = Math.random() * 2 + 1;
-                this.angle = Math.random() * Math.PI * 2;
-
+                //this.speed = Math.random() * 2 + 1;
+                //this.angle = Math.random() * Math.PI * 2;
+                this.vx = Math.random() * 2 - 1;
+                this.vy = Math.random() * 2 - 1;
+                
                 this.drawX = this.x;
                 this.drawY = this.y;
                 this.drawAngle = this.angle;
@@ -98,11 +100,7 @@
                 this.x += vx;
                 this.y += vy;
                 //lerp drawangle to angle, respecting wraparound
-                let diff = this.angle - this.drawAngle;
-                if (diff > Math.PI) diff -= Math.PI * 2;
-                if (diff < -Math.PI) diff += Math.PI * 2;
-                this.drawAngle += diff * 0.1;
-
+                this.lerpDrawAngle(this.angle, 0.1);
 
 
                 }
@@ -139,9 +137,6 @@
 
 
 
-
-
-
                 //lerp drawX and drawY to x and y
                 this.drawX += (this.x - this.drawX) * 0.1;
                 this.drawY += (this.y - this.drawY) * 0.1;
@@ -159,9 +154,9 @@
                 //get angle to cursor
                 let dx = cursorX - this.x;
                 let dy = cursorY - this.y;
-                if(Math.sqrt(dx*dx + dy*dy) < 256){
-                this.vx+=dx*0.01;
-                this.vy+=dy*0.01;
+                if(Math.sqrt(dx*dx + dy*dy) < 350){
+                this.vx+=dx*0.03;
+                this.vy+=dy*0.03;
                 }
                 }
 
@@ -200,13 +195,38 @@
 
             }
             lerpAngle(angle, amount) {
-                let diff = angle - this.angle;
+                //allow for continous rotation, temporarily modulo to 0-2PI
+                let a = this.angle % (Math.PI * 2);
+                let b = angle % (Math.PI * 2);
+                //get the difference between a and b
+                let diff = b - a;
+                //if diff is greater than PI, subtract 2PI
                 if (diff > Math.PI) diff -= Math.PI * 2;
+                //if diff is less than -PI, add 2PI
                 if (diff < -Math.PI) diff += Math.PI * 2;
-                this.angle += diff * amount;
+                //lerp a to b
+                a += diff * amount;
+                //set this.angle to a
+                this.angle = a;
+            }
+            lerpDrawAngle(angle, amount){
+                //allow for continous rotation, temporarily modulo to 0-2PI
+                let a = this.drawAngle % (Math.PI * 2);
+                let b = angle % (Math.PI * 2);
+                //get the difference between a and b
+                let diff = b - a;
+                //if diff is greater than PI, subtract 2PI
+                if (diff > Math.PI) diff -= Math.PI * 2;
+                //if diff is less than -PI, add 2PI
+                if (diff < -Math.PI) diff += Math.PI * 2;
+                //lerp a to b
+                a += diff * amount;
+                //set this.angle to a
+                this.drawAngle = a;
             }
 
 
+            /*
             get vx() {
                 return Math.cos(this.angle) * this.speed;
             }
@@ -220,6 +240,25 @@
             set vy(vy) {
                 this.angle = Math.atan2(vy, this.vx);
                 this.speed = Math.sqrt(this.vx*this.vx + vy*vy);
+            }
+            */
+           get angle() {
+            let angle = Math.atan2(this.vy, this.vx);
+            return angle;
+            }
+            set angle(angle) {
+                let speed = Math.sqrt(this.vx*this.vx + this.vy*this.vy);
+                this.vx = Math.cos(angle) * speed;
+                this.vy = Math.sin(angle) * speed;
+            }
+            get speed() {
+                let speed = Math.sqrt(this.vx*this.vx + this.vy*this.vy);
+                return speed;
+            }
+            set speed(speed) {
+                let angle = Math.atan2(this.vy, this.vx);
+                this.vx = Math.cos(angle) * speed;
+                this.vy = Math.sin(angle) * speed;
             }
 
             draw(ctx) {
