--- a/games/snails/snailbounce.html
+++ b/games/snails/snailbounce.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <input type="range" id="speed" min="1" max="10" value="2">Speed</range>
+        <input type="button" id="addsnails" value="Add Snails" onclick="addSnails(25)"></input>
         <canvas id="canvas" width="800" height="600"></canvas>
 
     </body>
