fix stack height

--- a/games/sandbox/index.html
+++ b/games/sandbox/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <script src="gpu-browser.js"></script>
         <script src="cellular2.js"></script>
     </head>
     <body>
